--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testovací Projekt s Obrázky</title>
+    <title>Prezentace o Hadech</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f7f7f7;
+            background-color: #f0f8ff;
         }
         header {
             background-color: #2c3e50;
@@ -35,7 +35,6 @@
             display: flex;
             justify-content: center;
             padding: 30px;
-            text-align: center;
             flex-wrap: wrap;
         }
         .content {
@@ -70,52 +69,89 @@
 <body>
 
 <header>
-    <h1>Testovací Projekt s Obrázky</h1>
+    <h1>Prezentace o Hadech</h1>
 </header>
 
 <nav>
     <a href="#">Úvod</a>
-    <a href="#">O nás</a>
-    <a href="#">Služby</a>
+    <a href="#">O Hadech</a>
+    <a href="#">Fakta</a>
     <a href="#">Kontakt</a>
 </nav>
 
 <section>
     <div class="content">
-        <h2>Vítejte na testovacím projektu</h2>
-        <p>Tento projekt ukazuje, jak zahrnout obrázky na webovou stránku. Níže najdete tři sekce, každou se třemi obrázky a krátkými popisy.</p>
+        <h2>9 Fascinujících Hadů</h2>
+        <p>Na této stránce najdete odkazy na různé obrázky hadů, každý s krátkým popisem. Prozkoumejte různé druhy a zajímavosti o těchto fascinujících zvířatech!</p>
 
-        <!-- First set of images and paragraph -->
         <div class="images">
-            <img src="https://via.placeholder.com/300x200?text=Obrázek+1" alt="Obrázek 1">
-            <img src="https://via.placeholder.com/300x200?text=Obrázek+2" alt="Obrázek 2">
-            <img src="https://via.placeholder.com/300x200?text=Obrázek+3" alt="Obrázek 3">
+            <div>
+                <a href="https://via.placeholder.com/300x200?text=Hadi+1">
+                    <img src="https://via.placeholder.com/300x200?text=Hadi+1" alt="Hadi 1">
+                </a>
+                <p><strong>Krajta mřížkovaná</strong>: Tento had je známý svým silným tělem a krásným vzorem na pokožce.</p>
+            </div>
+            <div>
+                <a href="https://via.placeholder.com/300x200?text=Hadi+2">
+                    <img src="https://via.placeholder.com/300x200?text=Hadi+2" alt="Hadi 2">
+                </a>
+                <p><strong>Krajta královská</strong>: Velmi oblíbený had jako domácí mazlíček, známý svou klidnou povahou.</p>
+            </div>
+            <div>
+                <a href="https://via.placeholder.com/300x200?text=Hadi+3">
+                    <img src="https://via.placeholder.com/300x200?text=Hadi+3" alt="Hadi 3">
+                </a>
+                <p><strong>Neotropický korálovec</strong>: Tento had je známý svou barevnou pokožkou a jedovatostí.</p>
+            </div>
         </div>
-        <p>První sekce s obrázky ukazuje základní ukázky obrázků, které můžete použít pro svůj projekt. Obrázky jsou stylizovány tak, aby vypadaly čistě a profesionálně.</p>
 
-        <!-- Second set of images and paragraph -->
         <div class="images">
-            <img src="https://via.placeholder.com/300x200?text=Obrázek+4" alt="Obrázek 4">
-            <img src="https://via.placeholder.com/300x200?text=Obrázek+5" alt="Obrázek 5">
-            <img src="https://via.placeholder.com/300x200?text=Obrázek+6" alt="Obrázek 6">
+            <div>
+                <a href="https://via.placeholder.com/300x200?text=Hadi+4">
+                    <img src="https://via.placeholder.com/300x200?text=Hadi+4" alt="Hadi 4">
+                </a>
+                <p><strong>Boa constriktor</strong>: Silný had, který je známý svou schopností dusit svou kořist.</p>
+            </div>
+            <div>
+                <a href="https://via.placeholder.com/300x200?text=Hadi+5">
+                    <img src="https://via.placeholder.com/300x200?text=Hadi+5" alt="Hadi 5">
+                </a>
+                <p><strong>Zmije obecná</strong>: Tato jedovatá zmije je známá svým agresivním chováním.</p>
+            </div>
+            <div>
+                <a href="https://via.placeholder.com/300x200?text=Hadi+6">
+                    <img src="https://via.placeholder.com/300x200?text=Hadi+6" alt="Hadi 6">
+                </a>
+                <p><strong>Pitón tygří</strong>: Tento had se vyznačuje krásným vzorem připomínajícím tygří srst.</p>
+            </div>
         </div>
-        <p>Druhá sekce obsahuje další obrázky, které ilustrují, jak snadno lze vložit více obrázků a textů na stránku. Tento design je flexibilní pro různé použití.</p>
 
-        <!-- Third set of images and paragraph -->
         <div class="images">
-            <img src="https://via.placeholder.com/300x200?text=Obrázek+7" alt="Obrázek 7">
-            <img src="https://via.placeholder.com/300x200?text=Obrázek+8" alt="Obrázek 8">
-            <img src="https://via.placeholder.com/300x200?text=Obrázek+9" alt="Obrázek 9">
+            <div>
+                <a href="https://via.placeholder.com/300x200?text=Hadi+7">
+                    <img src="https://via.placeholder.com/300x200?text=Hadi+7" alt="Hadi 7">
+                </a>
+                <p><strong>Tygrí Pitón</strong>: Tento velký had je známý svou velikostí a schopností lovit velkou kořist.</p>
+            </div>
+            <div>
+                <a href="https://via.placeholder.com/300x200?text=Hadi+8">
+                    <img src="https://via.placeholder.com/300x200?text=Hadi+8" alt="Hadi 8">
+                </a>
+                <p><strong>Zmije východní</strong>: Tento had má velmi silný jed a je běžný v Evropě a Asii.</p>
+            </div>
+            <div>
+                <a href="https://via.placeholder.com/300x200?text=Hadi+9">
+                    <img src="https://via.placeholder.com/300x200?text=Hadi+9" alt="Hadi 9">
+                </a>
+                <p><strong>Hroznýš královský</strong>: Královský had, který se vyznačuje svou krásnou zlatou barvou.</p>
+            </div>
         </div>
-        <p>Třetí sekce zobrazuje další obrázky a poskytuje závěrečné informace o stránce. Tento design je snadno přizpůsobitelný a může být použit pro různé účely.</p>
-
     </div>
 </section>
 
 <footer>
-    <p>&copy; 2025 Testovací Projekt</p>
+    <p>&copy; 2025 Prezentace o Hadech</p>
 </footer>
 
 </body>
 </html>
-
