--- a/index.html
+++ b/index.html
@@ -50,8 +50,12 @@
             gap: 20px;
             padding: 20px 0;
         }
-        .images img {
+        .images div {
             width: 30%;
+            text-align: center;
+        }
+        .images img {
+            width: 100%;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
