--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
                 <p><strong>Krajta mřížkovaná</strong>: Tento had je známý svým silným tělem a krásným vzorem na pokožce.</p>
             </div>
             <div>
-                <a href="https://via.placeholder.com/300x200?text=Hadi+2">
-                    <img src="https://via.placeholder.com/300x200?text=Hadi+2" alt="Hadi 2">
+                <a href="https://www.zoopraha.cz/images/lexikon/Krajta_kr%C3%A1lovska_foto_Tereza_Mrh%C3%A1lkov%C3%A1.jpg">
+                    <img src="https://www.zoopraha.cz/images/lexikon/Krajta_kr%C3%A1lovska_foto_Tereza_Mrh%C3%A1lkov%C3%A1.jpg" alt="Hadi 2">
                 </a>
                 <p><strong>Krajta královská</strong>: Velmi oblíbený had jako domácí mazlíček, známý svou klidnou povahou.</p>
             </div>
             <div>
-                <a href="https://via.placeholder.com/300x200?text=Hadi+3">
-                    <img src="https://via.placeholder.com/300x200?text=Hadi+3" alt="Hadi 3">
+                <a href="https://terareptilium.cz/img/picture/24/red_milk_snake.jpg">
+                    <img src="https://terareptilium.cz/img/picture/24/red_milk_snake.jpg" alt="Hadi 3">
                 </a>
                 <p><strong>Neotropický korálovec</strong>: Tento had je známý svou barevnou pokožkou a jedovatostí.</p>
             </div>
@@ -111,8 +111,8 @@
 
         <div class="images">
             <div>
-                <a href="https://via.placeholder.com/300x200?text=Hadi+4">
-                    <img src="https://via.placeholder.com/300x200?text=Hadi+4" alt="Hadi 4">
+                <a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQashkIVddbOklkap9eJdGQCWlfhlC_Joousg&s">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQashkIVddbOklkap9eJdGQCWlfhlC_Joousg&s" alt="Hadi 4">
                 </a>
                 <p><strong>Boa constriktor</strong>: Silný had, který je známý svou schopností dusit svou kořist.</p>
             </div>
