--- a/index.html
+++ b/index.html
@@ -117,14 +117,14 @@
                 <p><strong>Boa constriktor</strong>: Silný had, který je známý svou schopností dusit svou kořist.</p>
             </div>
             <div>
-                <a href="https://via.placeholder.com/300x200?text=Hadi+5">
-                    <img src="https://via.placeholder.com/300x200?text=Hadi+5" alt="Hadi 5">
+                <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/d/dc/Benny_Trapp_Vipera_berus.jpg/270px-Benny_Trapp_Vipera_berus.jpg5">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/dc/Benny_Trapp_Vipera_berus.jpg/270px-Benny_Trapp_Vipera_berus.jpg" alt="Hadi 5">
                 </a>
                 <p><strong>Zmije obecná</strong>: Tato jedovatá zmije je známá svým agresivním chováním.</p>
             </div>
             <div>
-                <a href="https://via.placeholder.com/300x200?text=Hadi+6">
-                    <img src="https://via.placeholder.com/300x200?text=Hadi+6" alt="Hadi 6">
+                <a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQS9XDXTYu3bhxZSUkGwgCsbOUmLnCczQDRNg&s">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQS9XDXTYu3bhxZSUkGwgCsbOUmLnCczQDRNg&s" alt="Hadi 6">
                 </a>
                 <p><strong>Pitón tygří</strong>: Tento had se vyznačuje krásným vzorem připomínajícím tygří srst.</p>
             </div>
