--- a/index.html
+++ b/index.html
@@ -138,14 +138,14 @@
                 <p><strong>Tygrí Pitón</strong>: Tento velký had je známý svou velikostí a schopností lovit velkou kořist.</p>
             </div>
             <div>
-                <a href="https://via.placeholder.com/300x200?text=Hadi+8">
-                    <img src="https://via.placeholder.com/300x200?text=Hadi+8" alt="Hadi 8">
+                <a href="https://is.muni.cz/el/sci/jaro2010/Z0005/18118868/zoo/Vip_ber.jpg">
+                    <img src="https://is.muni.cz/el/sci/jaro2010/Z0005/18118868/zoo/Vip_ber.jpg" alt="Hadi 8">
                 </a>
                 <p><strong>Zmije východní</strong>: Tento had má velmi silný jed a je běžný v Evropě a Asii.</p>
             </div>
             <div>
-                <a href="https://via.placeholder.com/300x200?text=Hadi+9">
-                    <img src="https://via.placeholder.com/300x200?text=Hadi+9" alt="Hadi 9">
+                <a href="https://budejovice.rozhlas.cz/sites/default/files/images/02180578.jpeg">
+                    <img src="https://budejovice.rozhlas.cz/sites/default/files/images/02180578.jpeg" alt="Hadi 9">
                 </a>
                 <p><strong>Hroznýš královský</strong>: Královský had, který se vyznačuje svou krásnou zlatou barvou.</p>
             </div>
