--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
 
         <div class="images">
             <div>
-                <a href="https://via.placeholder.com/300x200?text=Hadi+7">
-                    <img src="https://via.placeholder.com/300x200?text=Hadi+7" alt="Hadi 7">
+                <a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQS9XDXTYu3bhxZSUkGwgCsbOUmLnCczQDRNg&s">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQS9XDXTYu3bhxZSUkGwgCsbOUmLnCczQDRNg&s" alt="Hadi 7">
                 </a>
                 <p><strong>Tygrí Pitón</strong>: Tento velký had je známý svou velikostí a schopností lovit velkou kořist.</p>
             </div>
